--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ label {
 
 .button-options {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 16px;
 }
 
@@ -57,6 +59,8 @@ label {
   font-size: large;
   background-color: transparent;
   border: 2px solid black;
+  width: 125px;
+  height: 50px;
 }
 
 .btn:hover {
@@ -109,8 +113,18 @@ input[type='color']::-moz-color-swatch {
 
 #grid {
   display: grid;
-  height: 500px;
-  width: 500px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border: 1px solid gray;
+  height: 400px;
+  width: 400px;
+}
+
+@media screen and (min-width: 640px) {
+  #grid {
+    height: 500px;
+    width: 500px;
+  }
+  .button-options {
+    flex-direction: row;
+  }
 }
